crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__expression_statements_are_always_wrapped.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: "tree(\"$x = 1;\\nfoo();\\n\")"
---
ROOT
  EXPR_STMT
    LIST_EXPR
      ASSIGN_EXPR
        SCALAR_VAR
          `$` "$"
          identifier "x"
        `=` "="
        LITERAL
          number "1"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      CALL_EXPR
        SUB_NAME
          identifier "foo"
        ARG_LIST
          `(` "("
          LIST_EXPR
          `)` ")"
    `;` ";"
