crates/camello-syntax/src/parse/snapshots/camello_syntax__parse__tests__file_test_binds_at_named_unary_precedence.snap
---
source: crates/camello-syntax/src/parse/tests.rs
expression: "tree(\"-f $x . \\\"y\\\";\\n\")"
---
ROOT
  EXPR_STMT
    LIST_EXPR
      FILE_TEST_EXPR
        file test operator "-f"
        BINARY_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "x"
          `.` "."
          LITERAL
            string literal "\"y\""
    `;` ";"
